// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText when input has className only 1 className is printed 1`] = `
<div>
  <input
    class="jest p-inputtext p-component p-filled"
    data-pc-name="inputtext"
    data-pc-section="root"
  />
</div>
`;

exports[`InputText when input is blank it should not have filled state 1`] = `
<div>
  <input
    class="p-inputtext p-component"
    data-pc-name="inputtext"
    data-pc-section="root"
  />
</div>
`;

exports[`InputText when input is disabled it should render as disabled 1`] = `
<div>
  <input
    class="p-inputtext p-component p-disabled"
    data-pc-name="inputtext"
    data-pc-section="root"
    disabled=""
  />
</div>
`;

exports[`InputText when input is enabled then input accepts data entry and have filled state 1`] = `
<div>
  <input
    class="p-inputtext p-component p-filled"
    data-pc-name="inputtext"
    data-pc-section="root"
  />
</div>
`;

exports[`InputText when input is is set for validation only 1`] = `
<div>
  <input
    class="p-inputtext p-component p-filled"
    data-pc-name="inputtext"
    data-pc-section="root"
  />
</div>
`;
